# SERAPH

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  QueryRunner.tsx  SecurityLakeStatus.tsx
frontend/src/hooks/: useSecurityLake.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Events.tsx  Findings.tsx  Query.tsx
frontend/src/types/: index.ts
infrastructure/: app.py  cdk.json
infrastructure/stacks/: __init__.py  web_stack.py
lambdas/api/: handler.py  queries.py
tests/unit/: __init__.py
